FIX: Home and Index page spacing fixed

--- a/app/assets/stylesheets/components/_card-artwork.scss
+++ b/app/assets/stylesheets/components/_card-artwork.scss
@@ -9,7 +9,10 @@
   border: none;
   display: inline-block;
   column-break-inside: avoid;
-  margin-bottom: 0px !important;
+  margin: 15px 0px 0px 0px !important;
+  p {
+    margin: 0px;
+  }
 }
 
 .card img {
@@ -50,6 +53,7 @@
 
 .card-trip-infos h3, p {
   color: black;
+  margin: none;
 }
 
 .cards a {
